--- a/views/Doctor/Dashboard.ejs
+++ b/views/Doctor/Dashboard.ejs
@@ -52,14 +52,19 @@
 
                 </p>
             </div>
+            <section id="userWaiting">
+
+            </section>
         </header>
     <!-- /#page-content-wrapper -->
 
+</div>
+<div id='userdetail'>
 </div>
 <!-- /#wrapper -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="/js/chat.js"></script>
+<script src="/js/chatDoctor.js"></script>
 
 <% include ../partials/doctorFooter %>
