--- a/views/User/wait.ejs
+++ b/views/User/wait.ejs
@@ -5,9 +5,10 @@
     <div class="container-fluid cont">
         <div class="border border-dark rounded ">
             <div class="bg-primary  text-left text-white d-block p-1 border-bottom">
-                    <h4>Hello <%= username %></h4>
+                    <h4>Hello <span id="Username"><%= username %></span></h4>
+                    <h5>Mobile:<span id="mob"><%=mobile%></span></h5>
                     <h3>You have visited <span id="roomname"><%=doctordetail.userid%></span></h3>
-                <h3>Doctor Name: Dr.<%=doctordetail.username %></h3>
+                <h3>Doctor Name: Dr.<span  id="doctorName"><%=doctordetail.username %></span></h3>
             </div>
             <div class="p-3 bg-light">
                 <h5>Status:Online</h5>
@@ -19,6 +20,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="/js/chat.js"></script>
+<script src="/js/chatUser.js"></script>
 
 <% include ../partials/footer.ejs %>
