--- a/views/User/wait.ejs
+++ b/views/User/wait.ejs
@@ -36,7 +36,10 @@
          
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script
+			  src="https://code.jquery.com/jquery-3.3.1.js"
+			  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+			  crossorigin="anonymous"></script>
 <script src="/js/chatUser.js"></script>
 
 <% include ../partials/footer.ejs %>
